# PromptFuzz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  USAGE.md
data/: README.md  common.sh
data/c-ares/: build.sh  config.yaml
data/cJSON/: build.sh  config.yaml
data/cre2/: build.sh  config.yaml
data/curl/: build.sh  config.yaml
data/lcms/: build.sh  config.yaml  icc.dict
data/libaom/: build.sh  config.yaml
data/libjpeg/: build.sh  config.yaml
data/libjpeg-turbo/: build.sh  config.yaml
data/libmagic/: build.sh  config.yaml
data/libpcap/: build.sh  config.yaml
data/libpng/: build.sh  config.yaml
data/libtiff/: build.sh  config.yaml
data/libvpx/: build.sh  config.yaml
data/sqlite3/: build.sh  config.yaml
data/zlib/: build.sh  config.yaml
examples/: README.md
src/: config.rs  deopt.rs  fuzzer.rs  lib.rs  minimize.rs  mutation.rs
src/analysis/: adg.rs  callgraph.rs  cfg.rs  dfa.rs  fdsan.rs  header.rs  mod.rs
src/ast/: helper.rs  kind.rs  loc.rs  mod.rs  visitor.rs
src/execution/: ast.rs  logger.rs  mod.rs  pch.rs  sanitize.rs
src/feedback/: branches.rs  clang_coverage.rs  mod.rs  observer.rs  schedule.rs
src/program/: array.rs  gadget.rs  libfuzzer.rs  mod.rs  rand.rs  serde.rs  shim.rs  transform.rs
src/program/infer/: mod.rs  (+2 more)
src/request/: incoder.rs  mod.rs  openai.rs  prompt.rs
testsuites/: test.cc  test.h  test_adg.cc  test_aom.cc  test_cfg.cc  test_coalesce.c  test_cov.cc  test_dfa.cc  test_fdp.cc  test_hang.sh  test_pch.sh
testsuites/corpora/: default.profdata  default.profraw  merge_control_file
(+2200 files in other folders)
