[package]
name = "prompt_fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { version = "0.10.0" }
eyre = "0.6.8"
flexi_logger = "0.25.1"
log = "0.4.17"
once_cell = "1.1"
rand = "0.8.5"
regex = "1.9.3"
serde = "1.0.152"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
derive_builder = "0.12.0"
clang-ast = "0.1.16"
serde_json = "1.0.94"
serde_yaml = "0.9"
petgraph = { version = "0.6.3", features = ["serde-1"]}
serde_with = { version = "2.3.2", features = ["json"] }
paste = "1.0.12"
wait-timeout = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21.2"
tiktoken-rs = { version = "0.5.0" }
num_cpus = "1.16.0"
threadpool = "1.8.1"
plotters = "0.3"
